# le-git-graph

./: .gitignore  manifest.json
.github/workflows/: chrome-release.yml  firefox-release.yml
js/: addAuthorizationPrompt.js  addCommitsButton.js  authInject.js  authProcess.js  drawGraph.js  fetchCommits.js  fetchFilteredCommits.js  fetchFurther.js  loadBranchesButton.js  openCommitsTab.js  popup.js  serviceWorker.js  setBranchOptions.js  showCommits.js  showCommitsLoading.js  showLegend.js  sortCommits.js
js/authorisation/: oauth2.js
js/fre/: helper.js
server/: Dockerfile  docker-compose.yml  pyproject.toml  server.py
