[project]
name = "legitgraph-oauth-server"
version = "0.1.0"
description = "Minimal GitHub OAuth callback server for Le Git Graph"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn>=0.30.0,<1.0.0",
  "requests>=2.31.0,<3.0.0",
]

[project.scripts]
server = "server:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["server"]
